--- a/block-sync-demo/src/main/resources/application.properties
+++ b/block-sync-demo/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 # parity or geth json rpc [nodeName:json-url] and split : ,
 #parity.nodes=node1:http://192.168.79.128:8540,node2:http://192.168.79.128:8541,node3:http://192.168.79.128:8542
 #parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541,node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
-parity.nodes=node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
+#parity.nodes=node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
+parity.nodes=node0:http://192.168.79.128:8540
 
 # default dump log path
 observe.log.path=D:\block-observer
+
+# dump config
+dump.block = true
+dump.pending.tx= true
