test pending tx manage

--- a/block-sync-demo/src/main/resources/application.properties
+++ b/block-sync-demo/src/main/resources/application.properties
@@ -2,11 +2,19 @@
 #parity.nodes=node1:http://192.168.79.128:8540,node2:http://192.168.79.128:8541,node3:http://192.168.79.128:8542
 #parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541,node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
 #parity.nodes=node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
-parity.nodes=node0:http://192.168.79.128:8540
+parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541
 
 # default dump log path
 observe.log.path=D:\block-observer
 
-# dump config
-dump.block = true
-dump.pending.tx= true
+# handlers
+## Dump block & tx
+handler.dump = true
+handler.dump.block = true
+handler.dump.tx = false
+## Display miners
+handler.miner = false
+## Check block sync in nodes
+handler.sync.block = true
+## Manage pending tx results
+handler.sync.pending = false
