--- a/block-sync-demo/src/main/resources/application.properties
+++ b/block-sync-demo/src/main/resources/application.properties
@@ -1,20 +1,25 @@
+# Simple running
+# nohup java -jar sync-demo.war --spring.config.location=/..path../application.properties &
+server.port=8999
+
 # parity or geth json rpc [nodeName:json-url] and split : ,
-#parity.nodes=node1:http://192.168.79.128:8540,node2:http://192.168.79.128:8541,node3:http://192.168.79.128:8542
-#parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541,node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
-#parity.nodes=node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
-parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541
+parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541,node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
 
 # default dump log path
-observe.log.path=D:\block-observer
+#observe.log.path=D:\block-observer
+observe.log.path=E:\block-observer
 
 # handlers
 ## Dump block & tx
-handler.dump = true
-handler.dump.block = true
-handler.dump.tx = false
+handler.dump=true
+handler.dump.block=true
+handler.dump.tx=true
+
 ## Display miners
-handler.miner = false
+handler.miner=true
+
 ## Check block sync in nodes
-handler.sync.block = true
+handler.sync.block=true
+
 ## Manage pending tx results
-handler.sync.pending = false
+handler.sync.pending=true
