--- a/block-sync-demo/pom.xml
+++ b/block-sync-demo/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>core</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.web3j/parity -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>parity</artifactId>
+            <version>3.4.0</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
@@ -62,6 +68,7 @@
     </dependencies>
 
     <build>
+        <finalName>observe-demo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
