--- a/block-sync-demo/src/main/resources/application.properties
+++ b/block-sync-demo/src/main/resources/application.properties
@@ -12,20 +12,24 @@ observe.log.path=E:\block-observer
 
 # handlers
 ## Dump block & tx
-handler.dump=false
-handler.dump.block=false
-handler.dump.tx=false
+handler.dump=true
+handler.dump.block=true
+handler.dump.tx=true
 
 ## Display miners
 handler.miner=false
 
 ## Check block sync in nodes
 handler.sync.block=false
-handler.same.hash=true
+handler.same.hash=false
 
 ## Manage pending tx results
 handler.sync.pending=false
 
 ## Send transaction
 task.send.tx = false
+task.send.tx.nodename= node1
+
+## Check hashes other nodes (for different block chain)
+handler.compare.hash = true
 
