testing send txns

--- a/block-sync-demo/src/main/resources/application.properties
+++ b/block-sync-demo/src/main/resources/application.properties
@@ -12,7 +12,7 @@ observe.log.path=E:\block-observer
 
 # handlers
 ## Dump block & tx
-handler.dump=true
+handler.dump=false
 handler.dump.block=true
 handler.dump.tx=true
 
@@ -28,8 +28,10 @@ handler.sync.pending=false
 
 ## Send transaction
 task.send.tx = false
-task.send.tx.nodename= node1
+# e.g) node0,node1,node2
+task.send.tx.nodename = node1
+task.send.tx.sleep.bound = 100
 
 ## Check hashes other nodes (for different block chain)
-handler.compare.hash = true
+handler.compare.hash = false
 
