block gas limit test

--- a/block-sync-demo/src/main/resources/application.properties
+++ b/block-sync-demo/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8999
 
 # parity or geth json rpc [nodeName:json-url] and split : ,
 # parity.nodes=node0:http://192.168.79.128:8540,node1:http://192.168.79.128:8541,node2:http://192.168.79.128:8542,node3:http://192.168.79.128:8543
-parity.nodes=node0:http://192.168.5.50:8540
+#parity.nodes=node0:http://192.168.5.50:8540
+parity.nodes=node0:http://192.168.79.128:8540
 
 # default dump log path
 #observe.log.path=D:\block-observer
@@ -27,9 +28,9 @@ handler.same.hash=false
 handler.sync.pending=false
 
 ## Send transaction
-task.send.tx = false
-task.send.tx.nodename= node1
+task.send.tx = true
+task.send.tx.nodename= node0
 
 ## Check hashes other nodes (for different block chain)
-handler.compare.hash = true
+handler.compare.hash = false
 
