--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     </dependencies>
 
     <build>
+        <finalName>blockchain-collector</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
